# sqlitepersistentobjects

./: NSData-SQLitePersistence.m  NSDate-SQLitePersistence.h  NSDate-SQLitePersistence.m  NSMutableData-SQLitePersistence.h  NSMutableData-SQLitePersistence.m  NSNumber-SQLitePersistence.h  NSNumber-SQLitePersistence.m  NSObject-SQLitePersistence.m  NSString-NumberStuff.h  NSString-SQLiteColumnName.m  NSString-SQLitePersistence.m  NSString-UppercaseFirst.h  NSString-UppercaseFirst.m  ReadMe.txt  SQLiteInstanceManager.h  SQLiteInstanceManager.m  SQLitePersistentObject.h  SQLitePersistentObject.m  UIColor-SQLitePersistentObject.m  UIImage-SQLitePersistence.h  UIImage-SQLitePersistence.m
Sample Code/SQLitePersistenceTest/: Info.plist  MainWindow.xib  PersonDetail.xib  SQLitePersistenceTest_Prefix.pch  main.m
Sample Code/SimpleConsoleText/: CMakeLists.txt  Post.h  Post.m  PostCategory.h  PostCategory.m  PostComment.h  PostComment.m  PostInvalid.h  PostInvalid.m  ReadMe.txt  main.m
Tests/: Info.plist  TestInitialization.m
Tests/Classes/: SQLitePersistentObject-Testing.h  (+1 more)
src/: NSData-SQLitePersistence.h  NSDate-SQLitePersistence.m  NSMutableData-SQLitePersistence.h  NSNumber-SQLitePersistence.m  NSObject-SQLitePersistence.h  NSObject-SQLitePersistence.m  NSString-NumberStuff.m  NSString-SQLiteColumnName.h  NSString-SQLitePersistence.h  NSString-UppercaseFirst.h  SQLiteInstanceManager.h  SQLiteInstanceManager.m  SQLitePersistentObject.h  SQLitePersistentObject.m  UIColor-SQLitePersistentObject.h  UIImage-SQLitePersistence.h  UIImage-SQLitePersistence.m
(+35 files in other folders)
